navbar is almost ready

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hindustan Digital Seva V2</title>
 
-    <!-- Font Awesome Link for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <!--Remix Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
 
     <!--CSS Links-->
     <link rel="stylesheet" href="css/main.css">
@@ -18,24 +18,93 @@
 
 </head>
 <body>
-    <nav>
-        <!-- Checkbox for toggling menu -->
-        <input type="checkbox" id="check">
-        <!-- Menu icon -->
-        <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
-        </label>
-        <!-- Site logo -->
-        <label class="logo"><img src="logo.png" alt="HDS-Logo"></label>
-        <!-- Navigation links -->
-        <ul>
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">Mission</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Company</a></li>
-            <li><a href="#">Get Started</a></li>
-        </ul>
-    </nav>
+
+    <!--Navbar-->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo"><img src="logo.png" alt="logo"></a>
+
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="index.html" class="nav__link">
+                            <i class="ri-arrow-right-up-line"></i>
+                            <span>Home</span>
+                        </a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="mission.html" class="nav__link">
+                            <i class="ri-arrow-right-up-line"></i>
+                            <span>Mission</span>
+                        </a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <i class="ri-arrow-right-up-line"></i>
+                            <span>Services</span>
+                        </a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <i class="ri-arrow-right-up-line"></i>
+                            <span>Company</span>
+                        </a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <i class="ri-arrow-right-up-line"></i>
+                            <span>Get Started</span>
+                        </a>
+                    </li>
+                </ul>
+
+                <!-- Close button -->
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-large-line"></i>
+                </div>
+
+                <div class="nav__social">
+                    <a href="https://www.instagram.com/" target="_blank" class="nav__social-link">
+                        <i class="ri-instagram-line"></i>
+                    </a>
+
+                    <a href="https://github.com/" target="_blank" class="nav__social-link">
+                        <i class="ri-github-line"></i>
+                    </a>
+
+                    <a href="https://dribbble.com/" target="_blank" class="nav__social-link">
+                        <i class="ri-dribbble-line"></i>
+                    </a>
+
+                    <a href="https://www.linkedin.com/" target="_blank" class="nav__social-link">
+                        <i class="ri-linkedin-box-line"></i>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Toggle button -->
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-menu-line"></i>
+            </div>
+        </nav>
+    </header>
+
+    <!--Hero Section-->
+    <div class="hero">
+        <h2>Welcome To</h2>
+        <h1>HINDUSTAN DIGITAL SEVA</h1>
+        <h3>Seva For Every Citizen</h3>
+        <a href="#">Get Started</a>
+    </div>
+
+    <!--check-->
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam assumenda cum, dignissimos, distinctio dolorum ducimus esse excepturi, in maxime minima mollitia odio officiis porro quia similique veritatis voluptates? Architecto culpa doloribus enim facere illum, incidunt, ipsa laudantium neque non perferendis quidem, quisquam repellat repudiandae vel voluptatem. Distinctio explicabo sint veritatis.</p>
+
+
 
     <script src="scripts/main.js"></script>
 </body>
