hero section almost ready

--- a/index.html
+++ b/index.html
@@ -95,10 +95,14 @@
 
     <!--Hero Section-->
     <div class="hero">
-        <h2>Welcome To</h2>
-        <h1>HINDUSTAN DIGITAL SEVA</h1>
-        <h3>Seva For Every Citizen</h3>
-        <a href="#">Get Started</a>
+        <div class="hero-container">
+            <div class="hero-items">
+                <h2>Welcome To</h2>
+                <h1>HINDUSTAN DIGITAL SEVA</h1>
+                <h3>Seva For Every Citizen</h3>
+                <a href="#">Get Started</a>
+            </div>
+        </div>
     </div>
 
     <!--check-->
