why section ready

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!--Remix Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
 
+        <!--font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/3e01900325.js" crossorigin="anonymous"></script>
+
     <!--CSS Links-->
     <link rel="stylesheet" href="css/main.css">
 
@@ -105,8 +109,31 @@
         </div>
     </div>
 
-    <!--check-->
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam assumenda cum, dignissimos, distinctio dolorum ducimus esse excepturi, in maxime minima mollitia odio officiis porro quia similique veritatis voluptates? Architecto culpa doloribus enim facere illum, incidunt, ipsa laudantium neque non perferendis quidem, quisquam repellat repudiandae vel voluptatem. Distinctio explicabo sint veritatis.</p>
+    <!--Quote-->
+    <div class="quote">
+        <div class="quote-items">
+            <p>Going digital is no longer an option, it is the inevitable.</p>
+            <p>Prince Nadeem</p>
+        </div>
+    </div>
+
+    <!--Why-->
+    <div class="why">
+        <div class="why-items">
+            <div class="why-choose">
+                <h1>Why Should You Choose Us?</h1>
+                <h3><i class="fas fa-user-tie"></i> Professionals Only</h3>
+                <h3><i class="fas fa-rupee-sign"></i> Amazing Price</h3>
+                <h3><i class="fas fa-boxes"></i> Diversity</h3>
+            </div>
+            <div class="why-shield">
+                <img src="images/home/shield.png" alt="shield-img">
+                <h2>Best Quality Ever</h2>
+                <p>No question asked money back.</p>
+            </div>
+        </div>
+    </div>
+
 
 
 
