--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/3e01900325.js" crossorigin="anonymous"></script>
 
+    <!-- Linking Google fonts for icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+    <!-- Linking SwiperJS CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
     <!--CSS Links-->
     <link rel="stylesheet" href="css/main.css">
 
@@ -134,9 +140,69 @@
         </div>
     </div>
 
+    <!--slider-->
+    <div class="hds-slider">
+        <div class="container swiper">
+            <div class="card-wrapper">
+                <!-- Card slides container -->
+                <ul class="card-list swiper-wrapper">
+                    <li class="card-item swiper-slide">
+                        <a href="#" class="card-link">
+                            <img src="images/home/testimonial-images/customer1.jpg" alt="Card Image" class="card-image">
+                            <p class="badge badge-designer">Zafar</p>
+                            <h2 class="card-title">I love Hindustan Digital Seva</h2>
+                            <button class="card-button material-symbols-rounded">arrow_forward</button>
+                        </a>
+                    </li>
+                    <li class="card-item swiper-slide">
+                        <a href="#" class="card-link">
+                            <img src="images/home/testimonial-images/customer2.jpg" alt="Card Image" class="card-image">
+                            <p class="badge badge-developer">Zeeshan</p>
+                            <h2 class="card-title">Hindustan Digital Seva is everything for me.</h2>
+                            <button class="card-button material-symbols-rounded">arrow_forward</button>
+                        </a>
+                    </li>
+                    <li class="card-item swiper-slide">
+                        <a href="#" class="card-link">
+                            <img src="images/home/testimonial-images/customer3.jpg" alt="Card Image" class="card-image">
+                            <p class="badge badge-marketer">Azhar</p>
+                            <h2 class="card-title">This is the digital era and HDS stands for me.</h2>
+                            <button class="card-button material-symbols-rounded">arrow_forward</button>
+                        </a>
+                    </li>
+                    <li class="card-item swiper-slide">
+                        <a href="#" class="card-link">
+                            <img src="images/home/testimonial-images/customer4.jpg" alt="Card Image" class="card-image">
+                            <p class="badge badge-gamer">Zeenat</p>
+                            <h2 class="card-title">Thanks for having such service in my city.</h2>
+                            <button class="card-button material-symbols-rounded">arrow_forward</button>
+                        </a>
+                    </li>
+                    <li class="card-item swiper-slide">
+                        <a href="#" class="card-link">
+                            <img src="images/home/testimonial-images/customer5.jpg" alt="Card Image" class="card-image">
+                            <p class="badge badge-editor">Babar</p>
+                            <h2 class="card-title">Now I can participate in E-Tender with HDS.</h2>
+                            <button class="card-button material-symbols-rounded">arrow_forward</button>
+                        </a>
+                    </li>
+                </ul>
+
+                <!-- Pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- Navigation Buttons -->
+                <div class="swiper-slide-button swiper-button-prev"></div>
+                <div class="swiper-slide-button swiper-button-next"></div>
+            </div>
+        </div>
+    </div>
 
 
 
+    <!-- Linking SwiperJS script -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!--Linking JS-->
     <script src="scripts/main.js"></script>
 </body>
 </html>
