partner section is ready

--- a/index.html
+++ b/index.html
@@ -198,6 +198,38 @@
         </div>
     </div>
 
+    <!--Partner-->
+    <div class="partner">
+        <div class="partner-container">
+            <div class="partner-text">
+                <h1>Our Proud Partners</h1>
+                <hr>
+            </div>
+            <div class="partner-logo">
+                <div class="partern-1">
+                    <img src="images/home/partners/uti.png" alt="uti-logo"><br>
+                    <a href="">UTI Infrastructure Technology And Services Limited (UTIITSL)</a>
+                </div>
+                <div class="partern-2">
+                    <img src="images/home/partners/emudra.png" alt="emudra-logo"><br>
+                    <a href="">e-Mudra Limited</a>
+                </div>
+                <div class="partern-3">
+                    <img src="images/home/partners/csc.png" alt="csc-logo"><br>
+                    <a href="">Common Service Centres</a>
+                </div>
+                <div class="partern-4">
+                    <img src="images/home/partners/irctc.png" alt="irctc-logo"><br>
+                    <a href="">Indian Railway Catering and Tourism Corporation</a>
+                </div>
+                <div class="partern-5">
+                    <img src="images/home/partners/ayushman.png" alt="ayushman-logo"><br>
+                    <a href="">Ayushman Bharat Yojana (PMJAY)</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <!-- Linking SwiperJS script -->
